--- a/1.html
+++ b/1.html
@@ -10,15 +10,27 @@
 
 <body>
     <div>
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
+
     </div>
     <script>
-        console.log( (!(~+[])+{})[--[~+""][+[]]*[~+[]] + ~~!+[]]+({}+[])[[~!+[]]*~+[]])
-     
+        var clone = function (v) {
+            var o = v.constructor === Array ? [] : {};
+            for (var i in v) {
+                o[i] = typeof v[i] === "Object" ? clone(v[i]) : v[i];
+            }
+            return o;
+        }
+        var a = clone({
+            a: "1",
+            b: {
+                c: 1
+            },
+            d: function () {
 
-      
+            },
+            add: "as"
+        })
+        console.log(a)
     </script>
 </body>
 
